fix overlap

--- a/src/sass/_nav.sass
+++ b/src/sass/_nav.sass
@@ -3,15 +3,28 @@
 
 .nav
   position: fixed
-  right: 2.35rem
-  top: 50%
-  transform: translateY(-50%)
+  top: 0
+  transform: translate( calc(100vw - 100% - 2.35rem), 0)
   z-index: 1000
   display: flex
   flex-direction: column
   gap: 1rem
   transition: opacity 0.3s ease, visibility 0.3s ease
+
+  &::before
+    content: ''
+    position: absolute
+    inset: -20px -70px
+    background: rgba(255,249,245,0.75)
+    border-radius: 1rem
+    z-index: -1
+    pointer-events: none
+    display: none
+    @include mbp-down(xl)
+      display: block
   
+  
+
   @include mbp-down(lg)
     display: none
   
